# odoo-test

./: Dockerfile  README.md  docker-compose.yml  odoo.conf  pyproject.toml
addons/library_management/: __init__.py  __manifest__.py
addons/library_management/controllers/: __init__.py  library_controller.py
addons/library_management/models/: __init__.py  library_models.py  wizards.py
addons/library_management/security/: ir.model.access.csv
addons/library_management/views/: book_views.xml  menu_views.xml  rent_views.xml  wizard_views.xml
