[project]
name = "odoo-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Ostap Shp",email = "stark171705@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
