[project]
name = "odoo-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Ostap Shp",email = "stark171705@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2>=2.9.11,<3.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "lxml>=6.0.2,<7.0.0",
    "babel>=2.18.0,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "werkzeug>=3.1.6,<4.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "pytz>=2025.2,<2026.0",
    "gevent>=25.9.1,<26.0.0"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
